# egui_dock

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: rust-check.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix_pr_template.md  feature_pr_template.md
.github/workflows/: docs.yml  rust-check.yml  rust.yml  tests.yml
examples/: hello.rs  reject_windows.rs  save_load_dock_state.rs  simple.rs  tab_add.rs  tab_add_popup.rs  taffy.rs  text_editor.rs  traits.rs
src/: dynamic_tab.rs  lib.rs  popup.rs  style.rs  tab.rs  tree.rs  utils.rs
src/abstract_tree/: mod.rs
src/dock_state/: mod.rs  surface.rs  surface_index.rs  translations.rs  window_state.rs
src/dock_state/tree/: mod.rs  node.rs  node_index.rs  tab_index.rs  tab_iter.rs  window_state.rs
src/dock_state/tree/node/: leaf.rs  mod.rs  split.rs
src/tree/: mod.rs  node.rs  node_index.rs  tab_index.rs  tab_iter.rs  window.rs  window_index.rs
src/widgets/: mod.rs  popup.rs  tab_viewer.rs
src/widgets/dock_area/: allowed_splits.rs  drag_and_drop.rs  hover_data.rs  mod.rs  state.rs  style_fade.rs  tab_removal.rs
src/widgets/dock_area/show/: leaf.rs  main_surface.rs  mod.rs  window_surface.rs
