[package]
name = "egui_dock"
description = "Docking system for egui - an immediate-mode GUI library for Rust"
authors = ["lain-dono", "Adam Gąsior (Adanos020)"]
version = "0.18.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Adanos020/egui_dock"
categories = ["gui", "game-development"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]

[features]
default = []

# Enable serialization of `Tree`.
serde = ["dep:serde", "egui/serde"]

[dependencies]
egui = { version = "0.33", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }

duplicate = "2.0"
paste = "1.0"

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default",
    "default_fonts",
    "glow",
] }
serde_json = { version = "1" }

[[example]]
name = "save_load_dock_state"
required-features = ["serde"]
